--- a/_includes/contact-list.html
+++ b/_includes/contact-list.html
@@ -16,6 +16,14 @@
     <li>{% include icon-twitter.html username=site.twitter_username label='Twitter' %}</li>
   {% endif %}
 
+  {% if site.facebook_username %}
+    <li>{% include icon-facebook.html username=site.facebook_username label='Facebook' %}</li>
+  {% endif %}
+
+  {% if site.instagram_username %}
+    <li>{% include icon-instagram.html username=site.instagram_username label='Instagram' %}</li>
+  {% endif %}
+
   <li>
     {% if site.plugins contains 'jekyll-feed' or site.gems contains 'jekyll-feed' %}
       <a href="{{ site.feed.path | default: 'feed.xml' | relative_url }}" title="Atom Feed">
