--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -6,12 +6,12 @@
       this.page.identifier = '{{ page.url | absolute_url }}';
     };
 
-      (function() { // DON'T EDIT BELOW THIS LINE
+    (function() {
       var d = document, s = d.createElement('script');
       s.src = 'https://pro-xchange.disqus.com/embed.js';
       s.setAttribute('data-timestamp', +new Date());
       (d.head || d.body).appendChild(s);
-      })();
+    })();
   </script>
   <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 {% endif %}
